fix alignment

--- a/src/pages/Exchange/Exchange.css
+++ b/src/pages/Exchange/Exchange.css
@@ -596,7 +596,7 @@ table.Exchange-list .Exchange-list-item-active {
   grid-template-columns: auto auto;
   font-size: var(--font-sm);
   margin-bottom: 0.465rem;
-  align-items: flex-start;
+  align-items: baseline;
   justify-content: space-between;
 }
 
@@ -613,6 +613,8 @@ table.Exchange-list .Exchange-list-item-active {
 .Exchange-info-label {
   color: var(--text-gray);
   margin-right: 0.8rem;
+  display: inline-flex;
+  align-items: flex-start;
 }
 .Exchange-info-value-warning {
   color: var(--error-red);
